--- a/ports/qt-advanced-docking-system/CONTROL
+++ b/ports/qt-advanced-docking-system/CONTROL
@@ -1,4 +1,4 @@
 Source: qt-advanced-docking-system
 Version: 2019-08-09
 Build-Depends: qt5-base
-Description: Create customizable layouts using an advanced window docking system similar to what is found in many popular IDEs such as Visual Studio
+Description: Create highly customizable layouts using an advanced window docking system similar to what is found in many popular IDEs such as Visual Studio
